--- a/showcase-me-frontend/index.html
+++ b/showcase-me-frontend/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link rel="icon" type="image/svg+xml" href="/src/assets/showcasemelogo.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <title>ShowCaseMe - the developer Protfolio maker</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="margin: -10px;"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
